# zhenxun_bot_gui

./: DESIGN.md  README.md  debug_pages.py  debug_test.py  final_test.py  install_info.json  main.py  pyproject.toml  quick_test.py  run.py  simple_debug.py  simple_final_test.py  simple_test.py  start.bat  start.sh  test_animation.py  test_fix.py  test_navigation.py  test_pages_direct.py
src/: __init__.py
src/gui/: __init__.py  intro_dialog.py  main_window.py  sidebar.py
src/gui/pages/: __init__.py  environment_page.py  home_page.py  settings_page.py
src/gui/widgets/: __init__.py  animated_button.py  global_dialog.py
src/utils/: __init__.py  config.py
