[project]
name = "zhenxun-bot-gui"
version = "0.1.0"
description = ""
authors = [
    {name = "HibiKier",email = "775757368@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pyside6 (>=6.9.1,<7.0.0)"
]

[tool.poetry]
name = "zhenxun-bot-gui"
version = "0.1.0"
description = ""
authors = ["HibiKier <775757368@qq.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyside6 = ">=6.9.1,<7.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
